force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <label>Cost Sheet</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Cost Sheet No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>