force-app/main/default/objects/Quote__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Management Rejected</fullName>
            </value>
            <value>
                <fullName>Management Approved</fullName>
            </value>
            <value>
                <fullName>Customer Rejected</fullName>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>