force-app/main/default/objects/Quote__c/fields/Basic_Price__c.field-meta.xml
<CustomField>
    <fullName>Basic_Price__c</fullName>
    <formula>(Final_Price_Per_Sq_ft__c  * Super_Built_Up_Area__c) +((Final_Price_Per_Sq_ft__c/2)* Open_Terrace_Area__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price for Saleable Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>