force-app/main/default/objects/Quote__c/fields/Booking_Request__c.field-meta.xml
<CustomField>
    <fullName>Booking_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Request</label>
    <referenceTo>Booking_Request__c</referenceTo>
    <relationshipLabel>Cost Sheets</relationshipLabel>
    <relationshipName>Cost_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>