force-app/main/default/objects/Quote__c/fields/Built_Up_Area__c.field-meta.xml
<CustomField>
    <fullName>Built_Up_Area__c</fullName>
    <label>Built Up Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>