force-app/main/default/objects/Quote__c/fields/Car_Park_No__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_No__c</fullName>
    <label>Car Park No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>