force-app/main/default/objects/Quote__c/fields/Car_Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Type__c</fullName>
    <label>Car Parking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stilt</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>1st Level</fullName>
            </value>
            <value>
                <fullName>2nd Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>