force-app/main/default/objects/Quote__c/fields/Corpus_Fund__c.field-meta.xml
<CustomField>
    <fullName>Corpus_Fund__c</fullName>
    <formula>Unit__r.Corpus_Fund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corpus Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>