force-app/main/default/objects/Quote__c/fields/Cost_Sheet_Abandoned_Date__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_Abandoned_Date__c</fullName>
    <label>Cost Sheet Abandoned Date</label>
    <type>DateTime</type>
</CustomField>