force-app/main/default/objects/Quote__c/fields/Customer_Responded_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Responded_Date__c</fullName>
    <label>Customer Responded Date</label>
    <type>DateTime</type>
</CustomField>