force-app/main/default/objects/Quote__c/fields/EB_Debris__c.field-meta.xml
<CustomField>
    <fullName>EB_Debris__c</fullName>
    <formula>Project__r.EB_Debris_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EB &amp; Debris</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>