force-app/main/default/objects/Quote__c/fields/Email_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Date_Time__c</fullName>
    <label>Email Sent Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>