force-app/main/default/objects/Quote__c/fields/Final_Price_Per_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Final_Price_Per_Sq_ft__c</fullName>
    <label>Final Price Per Sq ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>