force-app/main/default/objects/Quote__c/fields/Floor_Rise_Charges__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Charges__c</fullName>
    <formula>(Floor_Rise_Charge__c* Super_Built_Up_Area__c) +((Floor_Rise_Charge__c/2)* Open_Terrace_Area__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Rise Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>