force-app/main/default/objects/Quote__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>Total_Cost_Including_GST__c +  Corpus_Fund__c +  GST_for_Corpus_Fund__c +  Maintenance_Charges__c +  GST_for_Maintenance_Charge__c +  EB_Debris__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>