force-app/main/default/objects/Quote__c/fields/GST_Charges_On_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>GST_Charges_On_Total_Cost__c</fullName>
    <formula>GST__c *  Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Charges On Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>