force-app/main/default/objects/Quote__c/fields/GST_for_Corpus_Fund__c.field-meta.xml
<CustomField>
    <fullName>GST_for_Corpus_Fund__c</fullName>
    <formula>Unit__r.GST_on_Corpus_Fund__c *  Corpus_Fund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST for Corpus Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>