force-app/main/default/objects/Quote__c/fields/GST_for_Maintenance_Charge__c.field-meta.xml
<CustomField>
    <fullName>GST_for_Maintenance_Charge__c</fullName>
    <formula>Unit__r.GST_on_Maintenance_Charge__c *  Maintenance_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST for Maintenance Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>