force-app/main/default/objects/Quote__c/fields/Is_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Is_Amount_Received__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Booking_Request__r.Amount_Received__c)) &amp;&amp;
  Booking_Request__r.Amount_Received__c != 0,
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Amount Received</label>
    <type>Checkbox</type>
</CustomField>