force-app/main/default/objects/Quote__c/fields/Is_Form_Responded__c.field-meta.xml
<CustomField>
    <fullName>Is_Form_Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Form Responded</label>
    <type>Checkbox</type>
</CustomField>