force-app/main/default/objects/Quote__c/fields/Maintenance_Charges__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Charges__c</fullName>
    <formula>Unit__r.Maintenance_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>