force-app/main/default/objects/Quote__c/fields/Open_Terrace_Area__c.field-meta.xml
<CustomField>
    <fullName>Open_Terrace_Area__c</fullName>
    <label>Open Terrace Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>