force-app/main/default/objects/Quote__c/fields/Premium_Charges__c.field-meta.xml
<CustomField>
    <fullName>Premium_Charges__c</fullName>
    <formula>Unit__r.Premium_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>