force-app/main/default/objects/Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preparation</fullName>
                <default>true</default>
                <label>Preparation</label>
            </value>
            <value>
                <fullName>Under Approval</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Closed Successfully</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>