force-app/main/default/objects/Quote__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Basic_Price__c + Floor_Rise_Charges__c + Premium_Charges__c + Other_Charges__c + Car_Parking_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>