force-app/main/default/objects/Quote__c/fields/Total_Cost_Including_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Including_GST__c</fullName>
    <formula>Total_Cost__c + GST_Charges_On_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Including GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>