force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Unit__c</columns>
    <columns>Booking_Request__c</columns>
    <columns>Booking__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>